# mensho-menu

./: README.md  mensho-menu.py  pyproject.toml
.streamlit/: config.toml
