[project]
name = "mesho-menu"
version = "0.1.0"
description = ""
authors = [{ name = "Evan Fvm", email = "evan.fvm@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit-pdf-viewer (>=0.0.23,<0.0.24)",
    "streamlit (>=1.45.1,<2.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
